maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:15: error: not found: value cpt
    cpt=cpt+1
    ^PledgeMaze:19: error: not found: value cpt
    cpt=cpt+1
    ^PledgeMaze:23: error: not found: value cpt
    cpt=cpt+1
    ^PledgeMaze:27: error: not found: value cpt
  cpt=cpt-1
  ^