maze.pledge.PledgeMaze.scala.code
override def run() {
  var cpt=0
  do(if(estFaceMur){
  	while(cpt!=0 && isDirectionFree(Direction.NORTH)){
    	keepHandOnSideWall()
    }
    avance()
  })while(!estSurBiscuit)
}

def keepHandOnSideWall(){
 	if(estFaceMur()){
    gauche()
    cpt=cpt+1
  }  
  if(estFaceMur()){
    gauche()
    cpt=cpt+1
  }
  if(estFaceMur()){
    gauche()
    cpt=cpt+1
  }
  avance()
  droite()
  cpt=cpt-1
}

def isDirectionFree(dir:Direction): Boolean ={
  while(getDirection!=dir){
    droite()
  }
  if(estFaceMur){
    return false
  }
  else{
    return true
  }
}